ZCII-4833: Fix spacing on form

--- a/tool/src/main/webapp/source/components/form/examElementForm/_examElementForm.scss
+++ b/tool/src/main/webapp/source/components/form/examElementForm/_examElementForm.scss
@@ -13,4 +13,6 @@
 
 }
 
-
+.exam-doc-note {
+ 	margin: 1em 0;
+}
